# resources/api/openapi.yaml
@@ -110,9 +110,7 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/StatuspageIncidents'
+                $ref: '#/components/schemas/StatuspageIncidents'
   /api/statuspages/{statuspageSlug}/incidents/{incidentID}:
     get:
       operationId: incidentInfo
